[package]
name = "sankaku-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sankaku-core = { path = "../sankaku-core" }

[[bin]]
name = "session_inputs"
path = "fuzz_targets/session_inputs.rs"
test = false
doc = false
bench = false
