[package]
name = "kyu2-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
webrtc = ["dep:tokio", "kyu2-core/webrtc"]

[dependencies]
kyu2-core = { path = "../kyu2-core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "time", "sync"], optional = true }
