[package]
name = "kyu2-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
webrtc = ["dep:bytes", "dep:serde_json", "dep:tokio", "dep:webrtc"]

[dependencies]
zstd = { version = "0.13", features = ["experimental"] }          # tANS compression (The Squeezer)
chacha20poly1305 = "0.10" # Encryption (The Shield)
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
rand_core = { version = "0.6", features = ["std"] }

kyu2-wirehair-sys = { path = "../kyu2-wirehair-sys" }
rand = "0.10.0"
bytes = { version = "1.10", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.48", features = ["rt", "sync", "time"], optional = true }
webrtc = { version = "0.14", optional = true }
